--- a/styles/style.css
+++ b/styles/style.css
@@ -9,21 +9,21 @@ body {
     width: 100%;
     height: 100%;
     display: inline-block;
-    background-image: url(images/bground.jpg);
+    background-image: url(../images/bground.jpg);
     background-size: cover;
+}
+
+#topContent {
+    
+    height: 100%;
+    width: 100%;
+    border-width: 0;
 }
 
 #upperCon {
     
     height: 90%;
     background-color: rgba(0,0,0,0.3);
-}
-
-#topContent {
-    
-    border-width: 0;
-    width: 100%;
-    height: 100%;
 }
 
 #lowerCon {
