--- a/styles/homeStyle.css
+++ b/styles/homeStyle.css
@@ -13,7 +13,7 @@ body {
 
 #imageArea {
     
-    width: 50%;
+    width: 45%;
     height: 100%;
     float: left;
     margin: 0;
@@ -22,7 +22,7 @@ body {
 #myPic {
     
     margin: 20% 0;
-    margin-left: 30%; 
+    margin-left: 25%; 
     height: 60%;
     width: 60%;
 }
@@ -33,23 +33,34 @@ body {
     height: 100%;
     margin: 0;
     float: left;
+    color: white;
 }
 
 #name {
     
     text-align: center;
-    height: 3%;
-    padding-top: 50%;
+    height: 15%;
+    padding-top: 40%;
 }
 
 #name h1 {
     
     margin: 0;
+    font-family: "Showcard Gothic";
+    font-size: 60px;
+    margin-left: 5px;
 }
 
 #line {
     
-    height: 10%;
+    padding-right: 10%;
+    height: 4%;
+    width: 100%;
+}
+
+#line h1 {
+    
+    margin: 0;
 }
 
 #line hr {
@@ -59,7 +70,7 @@ body {
 
 #detail {
     
-    height: 30%;
+    height: 9%;
 }
 
 .textDetail {
@@ -68,16 +79,28 @@ body {
     width: 30%;
     height: 100%;
     float: left;
+    font-family: sans-serif;
+}
+
+h3 {
+    
+    margin-top: 10px;
 }
 
 #first {
     
-    margin-left: 8%;
+    margin-left: 9%;
+}
+
+#second {
+    
+    width: 20%;
 }
 
 #last {
     
     border-width: 0;
+    width: 25%;
 }
 
 #detail h3 {
