--- a/styles/style.css
+++ b/styles/style.css
@@ -31,3 +31,29 @@ body {
     height: 10%;
     background-color: rgba(0,0,0,0.4);
 }
+
+#footer {
+    
+    height: 100%;
+    width: 70%;
+    margin: 0 15%;
+}
+
+.footerButtons {
+    
+    margin-top: 10px;
+    width: 18%;
+    height: 70%;
+    border-right: 1px solid white;
+    float: left;
+}
+
+#homeButton {
+    
+    margin-left: 6%;
+}
+
+#contactButton {
+    
+    border: 0;
+}
