--- a/styles/style.css
+++ b/styles/style.css
@@ -36,24 +36,52 @@ body {
     
     height: 100%;
     width: 70%;
-    margin: 0 15%;
+    margin: 0 24%;
 }
 
 .footerButtons {
     
     margin-top: 10px;
-    width: 18%;
-    height: 70%;
+    padding-top: 10px;
+    height: 45%;
     border-right: 1px solid white;
     float: left;
+    text-align: center;
+}
+
+.footerButtons a {
+
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+    font-family: sans-serif;
+    font-size: 20px;
+    height: 100%;
 }
 
 #homeButton {
     
     margin-left: 6%;
+    width: 10%;
+}
+
+#infoButton {
+    
+    width: 10%;
+}
+
+#eduButton {
+    
+    width: 17%;
+}
+
+#hobbyButton{
+    
+    width: 12%;
 }
 
 #contactButton {
     
     border: 0;
+    width: 14%;
 }
