putting structure for info.html

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,9 +66,9 @@ body {
     color: white;
 }
 
-#homeButton a:active {
+#homeButton a.active {
     
-    padding: 22px 19px;
+    padding: 22px 18px;
     background-color: rgba(244,143,66,0.8);
     color: white;
 }
