--- a/styles/infoStyles.css
+++ b/styles/infoStyles.css
@@ -12,13 +12,14 @@ body {
 
 .content {
     
-    width: 100%;
-    height: 17%;
+    width: 50%;
+    height: 31%;
+    float: left;
 }
 
 .imageSide.odd {
     
-    width: 25%;
+    width: 17%;
     height: 100%;
     float: left;
 }
@@ -28,6 +29,7 @@ body {
     width: 60%;
     height: 100%;
     float: left;
+    padding-top: 3%;
 }
 
 .imageSide.even {
@@ -35,14 +37,17 @@ body {
     width: 25%;
     height: 100%;
     float: left;
+    margin-left: 1%;
+    margin-bottom: 5%;
 }
 
 .infoSide.even {
     
-    margin-left: 15%;
-    width: 60%;
+    margin-left: 30%;
+    width: 40%;
     height: 100%;
     float: left;
+    padding-top: 3%;
 }
 
 .label1 {
@@ -55,6 +60,11 @@ body {
 .line {
     
     height: 5%;
+    width: 70%;
+}
+
+.even .line {
+    
     width: 100%;
 }
 
@@ -62,4 +72,19 @@ body {
     
     height: 30%;
     width: 100%;
+}
+
+h1, h3 {
+    
+    margin: 0;
+}
+
+.even h1, .even h3 {
+    
+    text-align: right;
+}
+
+hr {
+    
+    margin: 1% 0 0 0;
 }
