putting color and change font on the text content

--- a/styles/homeStyle.css
+++ b/styles/homeStyle.css
@@ -47,7 +47,7 @@ body {
     
     margin: 0;
     font-family: "Showcard Gothic";
-    font-size: 60px;
+    font-size: 3vw;
     margin-left: 5px;
 }
 
