--- a/styles/infoStyles.css
+++ b/styles/infoStyles.css
@@ -7,14 +7,19 @@ body {
     
     height: 80%;
     width: 80%;
-    margin: 3% 10%;
+    margin: 5% 15%;
 }
 
 .content {
     
-    width: 50%;
+    width: 45%;
     height: 31%;
     float: left;
+}
+
+.content{
+    
+    margin-left: 10px;
 }
 
 .imageSide.odd {
@@ -36,7 +41,7 @@ body {
 
 .imageSide.even {
     
-    width: 25%;
+    width: 10%;
     height: 100%;
     float: left;
     margin-left: 1%;
@@ -45,8 +50,8 @@ body {
 
 .infoSide.even {
     
-    margin-left: 30%;
-    width: 40%;
+    margin-left: 5%;
+    width: 60%;
     height: 100%;
     float: left;
     padding-top: 3%;
@@ -55,20 +60,16 @@ body {
 .label1 {
     
     margin-top: 3%;
-    height: 45%;
+    height: 30%;
     width: 100%;
 }
 
 .line {
     
     height: 5%;
-    width: 70%;
-}
-
-.even .line {
-    
     width: 100%;
 }
+
 
 .label2 {
     
@@ -80,7 +81,7 @@ h1 {
     
     margin: 0;
     color: #f4cb42;
-    font-family: "Showcard Gothic";
+    font-family: "Arial Black";
 }
 
 h3 {
@@ -90,11 +91,6 @@ h3 {
     font-weight: 100;
     font-family: "Tahoma";
     font-size: 15px;
-}
-
-.even h1, .even h3 {
-    
-    text-align: right;
 }
 
 hr {
@@ -114,6 +110,6 @@ hr {
 .even img {
     
     height: 50%;
-    width: 60%;
-    
+    width: 130%;
+    margin-top: 40px;
 }
