--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,7 @@ body {
     text-decoration: none;
     color: #f4cb42;
     font-weight: 500;
-    font-family: sans-serif;
+    font-family: "Arial";
     font-size: 20px;
     height: 100%;
 }
