--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -7,7 +7,7 @@ body {
     
     height: 80%;
     width: 40%;
-    margin: 2% 30%;
+    margin: 1% 30%;
 }
 
 #upperCon {
@@ -16,10 +16,19 @@ body {
     width: 100%;
 }
 
+.text h1{
+    
+    font-size: 100px;
+    margin: 0;
+    color: white;
+    font-family: "Matura MT Script Capitals"
+}
+
 #lowerCon {
     
     height: 70%;
     width: 100%;
+    margin-top: 30px;
 }
 
 .text {
@@ -31,13 +40,10 @@ body {
 .botCon {
     
     height: 33%;
-    width: 100%;
+    width: 70%;
+    margin: 0 20%;
 }
 
-#first {
-    
-    margin-top: 0;
-}
 
 .info {
     
@@ -122,7 +128,7 @@ img {
     position: absolute;
     opacity: 0;
     top: 17px;
-    right: 20px;
+    right: -10px;
     transition: 0.5s;
 }
 
