--- a/styles/homeStyle.css
+++ b/styles/homeStyle.css
@@ -47,7 +47,7 @@ body {
     
     margin: 0;
     font-family: "Arial Black";
-    color: #f4cb42;
+    color: coral;
     font-size: 62px;
     margin-left: 5px;
     font-weight: bolder;
@@ -65,9 +65,10 @@ body {
     margin: 0;
 }
 
+/*#fcb42 got to change coral */
 #line hr {
     
-    border: 3px solid #f4cb42;
+    border: 3px solid coral;
 }
 
 #detail {
