added slide show for games area in likes.html

--- a/styles/likeStyle.css
+++ b/styles/likeStyle.css
@@ -16,13 +16,17 @@ body {
     height: 100%;
     float: left;
     margin-left: 6%;
-    background-color: aqua;
 }
 
 .upCon {
     
     height: 85%;
     width: 100%;
+}
+
+.mySlides1 {
+    
+    display: none;
 }
 
 .downCon {
