added image for tv series area for likes.html

--- a/styles/likeStyle.css
+++ b/styles/likeStyle.css
@@ -16,6 +16,13 @@ body {
     height: 100%;
     float: left;
     margin-left: 6%;
+    opacity: 1;
+    transition: opacity 2s;
+}
+
+.content.fade {
+    
+    opacity: 0;
 }
 
 .upCon {
