--- a/styles/infoStyles.css
+++ b/styles/infoStyles.css
@@ -82,7 +82,7 @@ body {
 h1 {
     
     margin: 0;
-    color: coral;
+    color: #f4cb42;
     font-family: "Arial Black";
 }
 
@@ -98,7 +98,7 @@ h3 {
 hr {
     
     margin: 1% 0 0 0;
-    border: 1px solid coral;
+    border: 1px solid #f4cb42;
 }
 
 .odd img {
