--- a/styles/eduStyles.css
+++ b/styles/eduStyles.css
@@ -27,8 +27,30 @@ body {
 
 .right {
     
+    margin-top: 20px;
     width: 75%;
     height: 100%;
-    background-color: aquamarine;
     float:left;
+}
+
+h1 {
+    
+    color: #f4cb42;
+    margin: 0;
+    font-family: "Matura MT Script Capitals";
+    margin-left: 20px;
+}
+
+hr {
+    
+    margin: 0;
+    border: 2px solid #f4cb42;
+}
+
+h3 {
+    
+    margin: 0;
+    color: white;
+    font-family: "Tahoma";
+    margin-left: 20px;
 }
